k8s/overlays/test/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: f1-goat-determiner-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - test.f1goatdeterminer.mooo.com
      secretName: f1-goat-determiner-tls-test
  rules:
    - host: test.f1goatdeterminer.mooo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
